2014-01-10  Erwin Waterlander  <waterlan@xs4all.nl>

	* msys/msys-dos2unix.xml: Updated for dos2unix version 6.0.4.
	* msys/issue.log: Updated accordingly.
	* common/issue.log: Update accordingly.

2013-11-01  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Correct MPC requirements references to nonexistent MPFR package.

	* mingw32/mingw32-mpc.xml (mingw32-mpc-dev): Do not require...
	(mpfr-3.1.2-1-mingw32-dev): ...this, as an explicit 'eq' reference;
	use a 'ge' specification instead.

	* mingw32/mingw32-mpc.xml.lzma: Regenerate and republish.
	* mingw32/mingw32-package-list.xml.lzma: Likewise.
	* common/package-list.xml.lzma: Likewise.

	* mingw32/issue.log common/issue.log: Update accordingly.

2013-10-28  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Provide both GCC-3.4.5 and GCC-4.7.2 builds of Xerces-C++.

	* contrib/mingw32-xerces-c.xml (release 3.1.1): Rename as...
	(release 3.1.1-1): ...this; it provides the GCC-3.4.5 build; add...
	(release 3.1.1-2): ...this; it provides the GCC-4.7.2 build.

	* contrib/mingw32-xerces-c.xml.lzma: Regenerate and publish.
	* mingw32/mingw32-package-list.xml.lzma: Likewise.
	* common/package-list.xml.lzma: Likewise.

	* common/issue.log contrib/issue.log: Update accordingly.
	* mingw32/isue.log: Likewise.

2013-10-28  Earnie Boyd  <earnie@users.sourceforge.net>

	Allow any package release of gettext-0.18.3.1 to be installed.

	* mingw32/mingw32-libiconv.xml: Use a wildcard for the package release
	requirement of gettext-0.18.3.1.
	* common/issue.log, mingw32/issue.log: Update accordingly.
	* msys/issue.log: I don't know why msys-package-list.xml was date
	stamped for today but the make process decided that it was needed.

2013-10-23  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Add missing dependencies for libintl-dll, et al.

	* mingw32/mingw32-gettext.xml (libintl-dll): Make generic libgcc-1.dll
	and libiconv-2.dll>=1.14-2 dependencies apply to all releases.